Done interactions 1 and 2

--- a/views/private/create-user.hbs
+++ b/views/private/create-user.hbs
@@ -22,6 +22,10 @@
   </textarea>
   <br /><br />
 
+  <label for="facebookId">Facebook ID:</label>
+  <input type="text" name="facebookId" placeholder="Facebook ID" />
+  <br /><br />
+
   <select name="role" id="role">
     <option value=""></option>
     <option value="BOSS">BOSS</option>
