--- a/views/private/private.hbs
+++ b/views/private/private.hbs
@@ -3,3 +3,7 @@
 <a href="/create-user">Create user</a>
 <br /><br />
 <a href="/users">Users</a>
+<br /><br />
+<a href="/create-course">Create course</a>
+<br /><br />
+<a href="/courses">Courses</a>
